# chatbot_solutions

./: .gitignore  README.md  pyproject.toml
src/chatbot_solutions/: criar_tabelas.py  main.py  webhook_calls.py
src/chatbot_solutions/api/v1/: api.py
src/chatbot_solutions/api/v1/endpoints/: chat.py  submit_tools.py
src/chatbot_solutions/core/: configs.py  database.py  deps.py
src/chatbot_solutions/graphs/: agent_graph_leads.py  graph_yamaha.py  help_desk_graph.py
src/chatbot_solutions/graphs/leads_ia_project/: graph.py
src/chatbot_solutions/graphs/leads_ia_project/crew_ai_agents/: agents_schema.py
src/chatbot_solutions/graphs/leads_ia_project/documentos/: baseConhecimento.docx
src/chatbot_solutions/graphs/leads_ia_project/edges/: edges.py
src/chatbot_solutions/graphs/leads_ia_project/email/: arquivo_manager.py  email_sender.py
src/chatbot_solutions/graphs/leads_ia_project/llm/: llm.py
src/chatbot_solutions/graphs/leads_ia_project/nodes/: nodes.py  utils.py
src/chatbot_solutions/graphs/leads_ia_project/prompts/: leads_prompt.py
src/chatbot_solutions/graphs/leads_ia_project/rd_station/: methods.py  utils.py
src/chatbot_solutions/graphs/leads_ia_project/tools/: tools.py
src/chatbot_solutions/models/: usuario_model.py
src/chatbot_solutions/schemas/: usuario_schema.py
src/chatbot_solutions/storage/: Carlos_Yuri_lead_result.txt
