[project]
name = "chatbot-solutions"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "langgraph (>=0.6.3,<0.7.0)",
    "crewai (>=0.152.0,<0.153.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]

[tool.poetry]
packages = [{include = "chatbot_solutions", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
